k8s/03-mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: taskflow-mongo
  namespace: taskflow
spec:
  serviceName: taskflow-mongo
  replicas: 1
  selector:
    matchLabels:
      app: taskflow-mongo
  template:
    metadata:
      labels:
        app: taskflow-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
          readinessProbe:
            exec:
              command:
                ["mongosh", "--eval", "db.runCommand('ping').ok", "--quiet"]
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command:
                ["mongosh", "--eval", "db.runCommand('ping').ok", "--quiet"]
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: taskflow-mongo
  namespace: taskflow
spec:
  clusterIP: None # headless, statefulsets like a stable dns per pod
  selector:
    app: taskflow-mongo
  ports:
    - port: 27017
      targetPort: 27017
