k8s/05-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-backend
  namespace: taskflow
spec:
  replicas: 2 # 2 for basic HA, api pods are stateless so this is safe
  selector:
    matchLabels:
      app: taskflow-backend
  template:
    metadata:
      labels:
        app: taskflow-backend
    spec:
      containers:
        - name: backend
          # yourdockerhubusername -> swap for your real docker hub username.
          # the :latest-tag here is what CI/CD rewrites to a specific
          # commit sha/tag every time a build finishes (see argocd/README)
          image: sam929/taskflow-backend:913f484
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "150m"
              memory: "200Mi"
            limits:
              cpu: "400m"
              memory: "400Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 8
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: taskflow-backend
  namespace: taskflow
spec:
  selector:
    app: taskflow-backend
  ports:
    - port: 5000
      targetPort: 5000
