k8s/08-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-frontend
  namespace: taskflow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskflow-frontend
  template:
    metadata:
      labels:
        app: taskflow-frontend
    spec:
      containers:
        - name: frontend
          image: sam929/taskflow-frontend:913f484
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "80m"
              memory: "80Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: taskflow-frontend
  namespace: taskflow
spec:
  selector:
    app: taskflow-frontend
  ports:
    - port: 8080
      targetPort: 8080
